k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: websocket-sample
  name: deliverer
spec:
  replicas: 2
  selector:
    matchLabels:
      app: deliverer
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
  template:
    metadata:
      labels:
        app: deliverer
    spec:
      containers:
        - name: deliverer
          image: deliverer:0.0.1
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
